@@ -287,12 +287,22 @@ void encode_help_display() {
 	fprintf(stdout,"decomposition_levels\n");
 	fprintf(stdout,"[Precincts_size_X_res_Nr Precincts_size_Y_res_Nr]...\n");
 	fprintf(stdout,"   [Precincts_size_X_res_0 Precincts_size_Y_res_0]\n");
+	fprintf(stdout,"Main_header_start_position\n");
 	fprintf(stdout,"Main_header_end_position\n");
 	fprintf(stdout,"Codestream_size\n");
-	fprintf(stdout,"Tile_0 start_pos end_Theader end_pos TotalDisto NumPix MaxMSE\n");
-	fprintf(stdout,"Tile_1   ''           ''        ''        ''       ''    ''\n");
+	fprintf(stdout,"\n");
+	fprintf(stdout,"INFO ON TILES\n");
+	fprintf(stdout,"tileno start_pos end_hd end_tile nbparts disto nbpix disto/nbpix\n");
+	fprintf(stdout,"Tile_0 start_pos end_Theader end_pos NumParts TotalDisto NumPix MaxMSE\n");
+	fprintf(stdout,"Tile_1   ''           ''        ''        ''       ''    ''      ''\n");
 	fprintf(stdout,"...\n");
-	fprintf(stdout,"Tile_Nt   ''           ''        ''        ''       ''    ''\n");
+	fprintf(stdout,"Tile_Nt   ''           ''        ''        ''       ''    ''     ''\n");
+	fprintf(stdout,"...\n");
+	fprintf(stdout,"TILE 0 DETAILS\n");
+	fprintf(stdout,"part_nb tileno num_packs start_pos end_tph_pos end_pos\n");
+	fprintf(stdout,"...\n");
+	fprintf(stdout,"Progression_string\n");
+	fprintf(stdout,"pack_nb tileno layno resno compno precno start_pos end_ph_pos end_pos disto\n");
 	fprintf(stdout,"Tpacket_0 Tile layer res. comp. prec. start_pos end_pos disto\n");
 	fprintf(stdout,"...\n");
 	fprintf(stdout,"Tpacket_Np ''   ''    ''   ''    ''       ''       ''     ''\n");
